3.2.2 - Release