@@ -1,11 +1,13 @@
 package com.vecoo.legendcontrol_defender.discord;
 
 import com.vecoo.legendcontrol_defender.LegendControlDefender;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.concurrent.CompletableFuture;
 
@@ -16,19 +18,21 @@ public class DiscordWebhook {
         this.url = url;
     }
 
-    public void sendEmbed(String title, String description, String thumbnailUrl, String color) throws IOException {
-        String json = String.format("{\"embeds\": [{\"title\": \"%s\", \"description\": \"%s\", \"thumbnail\": {\"url\": \"%s\"}, \"color\": %s}]}", escapeJson(title), escapeJson(description), escapeJson(thumbnailUrl), color);
+    public void sendEmbed(@NotNull String title, @NotNull String description, @NotNull String thumbnailUrl, @NotNull String color) throws IOException {
+        String json = String.format("{\"embeds\": [{\"title\": \"%s\", \"description\": \"%s\", \"thumbnail\": {\"url\": \"%s\"}, \"color\": %s}]}",
+                escapeJson(title), escapeJson(description), escapeJson(thumbnailUrl), color);
 
         CompletableFuture.runAsync(() -> {
             try {
                 sendRequest(json);
             } catch (IOException e) {
-                LegendControlDefender.getLogger().error("[LegendControl-Defender] Error sending embed: " + e.getMessage());
+                LegendControlDefender.getLogger().error("Error sending embed: " + e.getMessage());
             }
         });
     }
 
-    private String escapeJson(String input) {
+    @NotNull
+    private String escapeJson(@Nullable String input) {
         if (input == null) {
             return "";
         }
@@ -39,9 +43,9 @@ public class DiscordWebhook {
                 .replace("\t", "\\t");
     }
 
-    private void sendRequest(String json) throws IOException {
+    private void sendRequest(@NotNull String json) throws IOException {
         if (!this.url.isEmpty()) {
-            HttpURLConnection connection = (HttpURLConnection) new URL(this.url).openConnection();
+            HttpURLConnection connection = (HttpURLConnection) URI.create(this.url).toURL().openConnection();
             connection.setConnectTimeout(10000);
             connection.setReadTimeout(10000);
 
@@ -57,7 +61,7 @@ public class DiscordWebhook {
             int responseCode = connection.getResponseCode();
 
             if (responseCode != 204) {
-                LegendControlDefender.getLogger().error("[LegendControl-Defender] Discord webhook failed: " + responseCode);
+                LegendControlDefender.getLogger().error("Discord webhook failed: " + responseCode);
             }
         }
     }
